# asset-report-automation-methods

./: .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: template_improvement.md
config/: sources.example.yml
docs/: sanitization_policy.md  workflow.md
examples/: sample_reports.csv
scripts/: run_daily.ps1
src/asset_report_automation/: __init__.py  cli.py  fetch_reports.py  models.py  normalize.py  parse_pdf.py  reconcile.py
