[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "asset-report-automation-methods"
version = "0.1.0"
description = "Sanitized reference templates for asset-report automation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12",
    "pypdf>=4.0",
    "python-dateutil>=2.9",
    "PyYAML>=6.0",
    "requests>=2.31",
]

[project.scripts]
asset-report-automation = "asset_report_automation.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
